<resources>
    <string name="app_name">Evaluacion2</string>
    <string name="registrar_equipo">REGISTRAR EQUIPO</string>
    <string name="registrar_jugador">REGISTRAR JUGADOR</string>
    <string name="registrar_partido">REGISTRAR PARTIDO</string>
    <string name="listar_jugadores">LISTAR JUGADORES</string>
    <string name="listar_partidos">LISTAR PARTIDOS</string>
    <string name="nombre_equipo">NOMBRE EQUIPO</string>
    <string name="nombre_jugador">NOMBRE JUGADOR</string>
    <string name="apellido_jugador">APELLIDO JUGADOR</string>
    <string name="registrar_nuevo_j">REGISTRAR</string>
    <string name="salir_registrar_j">SALIR</string>
    <string name="registrar_nuevo_p">REGISTRAR</string>
    <string name="salir_registrar_p">SALIR</string>
    <string name="registrar_nuevo_e">REGISTRAR</string>
    <string name="salir_registrar_e">SALIR</string>
    <string name="cantidad_de_goles">CANTIDAD DE GOLES</string>
    <string name="fecha_encuentro">FECHA ENCUENTRO</string>
    <string name="btn_buscar">BUSCAR</string>
    <string name="btn_salir_lista_j">SALIR</string>
    <string-array name="tipo_partidos">
        <item>Seleccione</item>
        <item>Amistosos</item>
        <item>Clasificatorio</item>
        <item>Fase de Grupos</item>
        <item>Octavos</item>
        <item>Cuartos</item>
        <item>Semifinal</item>
        <item>3° y 4° Puesto</item>
        <item>Final</item>
    </string-array>
</resources>
